--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,34 @@
 
 <div class="content" role="main">
 
+
+
+  <mat-card class="example-card">
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-actions>
+      <div class="footer-card-dog">
+        <div class="pl5">
+          <div>Affenpinscher</div>
+          <div class="spanBreed">Dog Breed</div>
+        </div>
+        <div>
+          <button class="btn-card" mat-button>
+            <mat-icon class="ico-btn" aria-hidden="false">favorite_border</mat-icon>
+            Like
+          </button>
+          <button class="btn-card" mat-button>
+            <mat-icon class="ico-btn" aria-hidden="false">share</mat-icon>
+            Share
+          </button>
+
+        </div>
+      </div>
+    </mat-card-actions>
+  </mat-card>
+
+
+
+  <hr/>
   <!-- Footer -->
   <footer>
     Look for dogs 2021
