--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,143 +1,181 @@
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 8px 0;
+}
+
+p {
+  margin: 0;
+}
+
+.spacer {
+  flex: 1;
+}
+
+.toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #1976d2;
+  color: white;
+  font-weight: 600;
+}
+
+.toolbar img {
+  margin: 0 16px;
+}
+
+.toolbar #twitter-logo {
+  height: 40px;
+  margin: 0 8px;
+}
+
+.toolbar #youtube-logo {
+  height: 40px;
+  margin: 0 16px;
+}
+
+.toolbar #twitter-logo:hover,
+.toolbar #youtube-logo:hover {
+  opacity: 0.8;
+}
+
+.content {
+  display: flex;
+  margin: 82px auto 32px;
+  padding: 0 16px;
+  max-width: 90%;
+  flex-direction: column;
+  align-items: center;
+}
+
+a,
+a:visited,
+a:hover {
+  color: #1976d2;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #125699;
+}
+
+footer {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  line-height: 20px;
+}
+
+footer a {
+  display: flex;
+  align-items: center;
+}
+
+svg#clouds {
+  position: fixed;
+  bottom: -160px;
+  left: -230px;
+  z-index: -10;
+  width: 1920px;
+}
+
+.example-card {
+  max-width: 400px;
+  border: 1px #aaa solid;
+  background-color: #fff;
+}
+
+.footer-card-dog {
+  display: flex;
+  justify-content: space-between;
+}
+
+.example-card {
+  width: 27%;
+  margin: auto 1.3%;
+  margin-bottom: 25px;
+}
+
+.containerImegDog {
+  height: 350px;
+}
+
+.spanBreed {
+  font-size: 10px;
+  font-weight: bolder;
+  margin-top: -2px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.pl5 {
+  padding-left: 5px;
+}
+
+.ico-btn {
+  font-size: 17px;
+  padding-top: 5px;
+}
+
+.btn-card {
+  padding-left: 4px;
+  padding-right: 10px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.imgDogs {
+  height: 100%;
+  object-fit: cover;
+  margin-bottom: 0px;
+}
+
+.containerSpinnerDog {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  text-align: center;
+  background: rgb(25 118 210);
+  background: linear-gradient(180deg, rgb(25 118 210) 65%, rgba(145, 161, 197, 1) 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.spinnerDog{
+  margin-top: -90px;
+}
+
+.spinnerDog .mat-progress-spinner circle, .spinnerDog .mat-spinner circle {
+  stroke: #3fb53f !important;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .spacer {
-    flex: 1;
-  }
-
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-  }
-
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
-    opacity: 0.8;
-  }
-
-  .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 90%;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  a,
-  a:visited,
-  a:hover {
-    color: #1976d2;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #125699;
-  }
-
-  footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-  }
-
-  footer a {
-    display: flex;
-    align-items: center;
-  }
-
-  svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
-  }
-
-  .example-card {
-    max-width: 400px;
-    border: 1px #aaa solid;
-    background-color: #fff;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-    border-radius: 8px 0;
-  }
-
-  .footer-card-dog{
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .example-card {
-    max-width: 32%;
-  }
-
-  .spanBreed {
-    font-size: 10px;
-    font-weight: bolder;
-    margin-top: -2px;
-  }
-
-  .w-100{
-      width: 100%;
-  }
-
-  .pl5 {
-    padding-left: 5px;
-  }
-
-  .ico-btn{
-    font-size: 17px;
-    padding-top: 5px;
-  }
-
-  .btn-card{
-      padding-left: 4px;
-      padding-right: 10px;
-  }
-  
+.containerSpinner{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5%;
+}
