updated the routes of the images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img width="40" alt="Angular Logo"
-    src="../assets/images/icoDogWhite.png" />
+    src="./../assets/images/icoDogWhite.png" />
   <span>Dogs</span>
 
   <div class="spacer"></div>
@@ -49,7 +49,7 @@
 
   <div class="containerSpinner" *ngIf="loading$ | async">
     <div class="containerSpinnerDog">
-      <img src="../assets/images/icoDogWhite.png" alt="" width="65">
+      <img src="./../assets/images/icoDogWhite.png" alt="" width="65">
     </div>
     <mat-spinner class="spinnerDog" color="accent">
     </mat-spinner>
